# boolrl

./: CHANGELOG.md  README.md  REWARD_DESIGN.md  TRAINING_SUMMARY.md  gnn_models.py  main.py  pyproject.toml  replay_buffer.py  requirements.txt  setup.py  test_imports.py
agents/: agent_gnn.py  agent_mlp.py  agent_seq.py
environments/: base_env.py  boolean_env_gnn.py  boolean_env_mlp.py  boolean_env_seq.py
tests/gnn/: test_gnn.py
tests/mlp/: test_mlp.py
tests/seq/: test_seq.py
